-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.1
-
None
-
Linux, the latest Qt5 stable
-
qtqc: 70bd2661311e11ac0679160ad0bbb36bdb6c6ecf
ComboBox auto tests have started constantly failing in the latest stable. The problem is that ComboBox does not get active focus as expected.
- http://testresults.qt-project.org/ci/QtQuickControls_stable_Integration/build_00550/linux-g++_shadow-build_Ubuntu_11.10_x86/log.txt.gz
- http://testresults.qt-project.org/ci/QtQuickControls_stable_Integration/build_00552/linux-g++_no-widgets_Ubuntu_12.04_x64/log.txt.gz
- ...
qtquickcontrols is a reverse dependency to qtdeclarative, so it's currently blocking qtdeclarative integration as well:
- http://testresults.qt-project.org/ci/QtDeclarative_stable_Integration/build_02071/revdep-qtquickcontrols_linux-g++_shadow-build_Ubuntu_11.10_x86/log.txt.gz
- http://testresults.qt-project.org/ci/QtDeclarative_stable_Integration/build_02073/revdep-qtquickcontrols_linux-g++_developer-build_qtnamespace_qtlibinfix_Ubuntu_12.04_x64/log.txt.gz
- ...
I have tracked down the problem to https://codereview.qt-project.org/#change,82587.
- resulted from
-
QTBUG-35302 Dialog boxes without toplevel widget parent appear (or vanish) behind the top level window
-
- Closed
-
| For Gerrit Dashboard: QTBUG-38508 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 83898,1 | QtGui and XCB now actually supports modality | stable | qt/qtquickcontrols | Status: MERGED | +2 | 0 |