QtGui and XCB now actually supports modality

However, however, popup windows should still have priority, which is not
yet implemented. It still doesn't explain why this fixes all the
autotest failures.

Task-number: QTBUG-38508
Change-Id: I3f93785b0b6c02b0fa42b1460526ea4b42b6f9a1
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>
Reviewed-by: Liang Qi <liang.qi@digia.com>